js added to gulp

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,7 @@
     <h1>Base Project Template</h1>
     <img src="./images/testImage.jpg" alt="test image" />
     <p class="main_body_text">Winter's comming))</p>
+    <!-- If you want to add another script, create it in src/js/ folder and add it here, like below -->
+    <script src="js/script.js"></script>
   </body>
 </html>
