--- a/src/index.html
+++ b/src/index.html
@@ -544,12 +544,100 @@
                   </ul>
                 </li>
 
-
               </ul>
-              
             </li>
-            <li><a href="#"><i class="fas fa-th-list"></i>Малая механизация</a></li>
+
+            <li>
+              <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
+              <a href="#"><i class="fas fa-th-list"></i>Малая механизация</a>
+              <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
+              <ul>
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-1">
+                  <a href="#">Окантователи</a>
+                  <label for="sub_m2-1" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-2">
+                  <a href="#">Приспособления</a>
+                  <label for="sub_m2-2" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-3">
+                  <a href="#">Лапки отделочные</a>
+                  <label for="sub_m2-3" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-4">
+                  <a href="#">Приспособления для специальных машин</a>
+                  <label for="sub_m2-4" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-5">
+                  <a href="#">Ограничительные линейки</a>
+                  <label for="sub_m2-5" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-6">
+                  <a href="#">Приспособления разные</a>
+                  <label for="sub_m2-6" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <!-- <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-7">
+                  <a href="#">7</a>
+                  <label for="sub_m2-7" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-8">
+                  <a href="#">8</a>
+                  <label for="sub_m2-8" class="toggleSubmenu"><i class="fa"></i></label>
+                  <ul>
+                    <li><a href="#">x</a></li>
+                    <li><a href="#">x</a></li>
+                  </ul>
+                </li> -->
+
+               
+              </ul>
+            </li>
+
             <li><a href="#"><i class="fas fa-th-list"></i>Аксессуары</a></li>
+
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4">
               <a href="#"><i class="fas fa-th-list"></i>Иглы</a>
@@ -832,6 +920,11 @@
 
 
   </header>
+
+  <dib class="block-super"></dib>
+
+  <div class="block-futer"></div>
+
   
   <script src="https://kit.fontawesome.com/0bd948430b.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
