--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
           <ul>
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
-              <a href="#"><i class="fas fa-th-list"></i>Запасти</a>
+              <a href="#"><i class="fas fa-th-list"></i>Запасти &#11167;</a>
               <label for="sub_m1" class="toggleSubmenu"><i class="fa"></i></label>
               <ul>
                 <li>
@@ -273,7 +273,7 @@
                 </li>
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-5">
-                  <a href="#">Лезвия для раскройных машин</a>
+                  <a href="#">Лезвия раскройные машины</a>
                   <label for="sub_m1-5" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">Каталог PDF Лезвия для раскройных машин</a></li>
@@ -464,7 +464,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-15">
-                  <a href="#">Запчасти для раскройного оборудования</a>
+                  <a href="#">Запчасти для ножей</a>
                   <label for="sub_m1-15" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">Каталог PDF Запчасти для раскройного оборудования</a></li>
@@ -584,7 +584,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-4">
-                  <a href="#">Приспособления для специальных машин</a>
+                  <a href="#">Спецприспособления</a>
                   <label for="sub_m2-4" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">x</a></li>
