--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,13 @@
       </div>
       <div  class="cart-block">
         <div class="cart">
+          <a href="" class="shopping-backet">
+            <img src="images/basket.png" class="img_basket" alt="">
+            <p class="text_basket">карзина</p>
+          </a>
+          
           <!-- <input type="checkbox" name="toggle" class="toggleBasket" id="shopping-backet"> -->
-          <a href="#" class="shopping-backet"><i class="fas fa-shopping-basket"></i>Карзина</a>
+          <!-- <a href="#" class="shopping-backet"><i class="fas fa-shopping-basket"></i>Карзина</a> -->
           <!-- <label for="shopping-backet" class="toggleBasket"><i class="fa"></i></label> -->
         </div>
       </div>
@@ -136,9 +141,10 @@
           <ul>
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
-              <a href="#"><i class="fas fa-th-list"></i>Запасти &#11167;</a>
+              <!-- <a href="#"><i class="fas fa-th-list"></i>Запасти &#11167;</a> -->
+              <a href="#"><i class="fas fa-th-list"></i>Запасти</a>
               <label for="sub_m1" class="toggleSubmenu"><i class="fa"></i></label>
-              <ul>
+              <ul class="level-li-one">
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
                   <a href="#">Двигатели ткани</a>
@@ -273,7 +279,7 @@
                 </li>
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-5">
-                  <a href="#">Лезвия раскройные машины</a>
+                  <a href="#">Лезвия раскройные</a>
                   <label for="sub_m1-5" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">Каталог PDF Лезвия для раскройных машин</a></li>
@@ -375,7 +381,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-11">
-                  <a href="#">Шпули</a>
+                  <a href="#">Шпульки</a>
                   <label for="sub_m1-11" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">Каталог PDF Шпули</a></li>
@@ -551,7 +557,7 @@
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
               <a href="#"><i class="fas fa-th-list"></i>Малая механизация</a>
               <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
-              <ul>
+              <ul class="level-li-two">
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-1">
                   <a href="#">Окантователи</a>
@@ -642,7 +648,7 @@
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4">
               <a href="#"><i class="fas fa-th-list"></i>Иглы</a>
               <label for="sub_m4" class="toggleSubmenu"><i class="fa"></i></label>
-              <ul>
+              <ul class="level-li-four">
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-0">
@@ -824,7 +830,7 @@
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m5">
               <a href="#"><i class="fas fa-th-list"></i>MANUAL</a>
               <label for="sub_m5" class="toggleSubmenu"><i class="fa"></i></label>
-              <ul>
+              <ul class="level-li-five">
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m5-1">
                   <a href="#">PARTS LIST</a>
