--- a/src/index.html
+++ b/src/index.html
@@ -982,7 +982,71 @@
 
   </header>
 
-  <dib class="block-super">rereerrrrrreer</dib>
+  <dib class="content-block"></dib>
+
+  <footer class="main-footer">
+    <div class="container">
+
+      <div class="box">
+        <h4>About us</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et numquam quibusdam ullam facilis exercitationem officiis earum, provident, ipsum, iusto repudiandae suscipit enim autem at.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, fugiat iste repudiandae aut autem unde dicta! Voluptate qui suscipit et.</p>
+        <div class="social">
+
+          <a href="#">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-instagram fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-youtube fa-2x"></i>
+          </a>
+
+        </div>
+      </div>
+
+      <div class="box">
+        <h4>Address</h4>
+        <div class="address">
+          <a href="#">
+            <i class="fas fa-map-marker-alt fa-lg"></i>
+            123B Viet Nam
+          </a>
+          <a href="tel:+38095-3989891">
+            <i class="fas fa-phone-square-alt fa-lg"></i>
+            +38095-3989891
+          </a>
+          <a href="mailto:sima99sewing@gmail.com">
+            <i class="fas fa-envelope fa-lg"></i>
+            sima99sewing@gmail.com
+          </a>
+
+        </div>
+      </div>
+
+      <div class="box">
+        <h4>Contact us</h4>
+        <form>
+          <label for="mail">Email <span>&#10034;</span></label>
+          <input type="email" name="mail" id="mail" required>
+          <label for="mess">Message <span>&#10034;</span></label>
+          <textarea name="mess" id="mess" rows="3" required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+
+    </div>
+    <div class="author">
+      <p><span>Dev AT</span> copyright &copy; 2020</p>
+    </div>
+  </footer>
 
 
   
