--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             <a href="#" class="mobile-menu-a">О&nbsp;нас</a>
           </li>
           <li class="mobile-menu-li">
-            <a href="#" class="mobile-menu-a">Акции</a>
+            <a href="#" class="mobile-menu-a">Ремонт</a>
           </li>
           <li class="mobile-menu-li">
             <a href="#" class="mobile-menu-a">Доставка</a>
@@ -66,12 +66,12 @@
 
     <div class="headerTwo">
       <div class="container_slider_css">
-        <img class="photo_slider_css" src="images/77777-1.png" alt="">
         <img class="photo_slider_css" src="images/77777-2.png" alt="">
-        <img class="photo_slider_css" src="images/77777-3.jpg" alt="">
-        <img class="photo_slider_css" src="images/77777-4.jpg" alt="">
-        <img class="photo_slider_css" src="images/77777-5.png" alt="">
-        <img class="photo_slider_css" src="images/77777-6.png" alt="">
+        <img class="photo_slider_css" src="images/55555-1.png" alt="">
+        <img class="photo_slider_css" src="images/55555-2.png" alt="">
+        <img class="photo_slider_css" src="images/55555-3.png" alt="">
+        <img class="photo_slider_css" src="images/55555-4.png" alt="">
+        <img class="photo_slider_css" src="images/55555-5.png" alt="">
   
         <div id="search_contact">
           <div class="search_contact_phone_email">
@@ -91,8 +91,8 @@
         <div id="logo">
           <a class="logo_a" href="#">
             <div class="title">
-              <h1 class="logoTitleText_h1">SIMA</h1>
-              <h6 class="logoTitleText_h6">SEWING INDUSTRIAL<br><br>MACHINE ACCESSORIES</h6>
+              <h1 class="logoTitleText_h1 logoTitleText">SIMA</h1>
+              <h6 class="logoTitleText_h6 logoTitleText">SEWING INDUSTRIAL<br><br>MACHINE ACCESSORIES</h6>
             </div>
           </a>
         </div>
@@ -105,6 +105,8 @@
             </form>
           </div>
         </div>
+
+       
        
       </div>
     </div>
@@ -504,11 +506,11 @@
                     <li><a href="#">Запчасти к моторам</a></li>
                   </ul>
 
-                <li>
+                <!-- <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-700">
                   <a href="#">yyyyyyy</a>
                   <label for="sub_m1-700" class="toggleSubmenu"><i class="fa"></i></label>
-                </li>
+                </li> -->
 
 
                 <li>
@@ -982,7 +984,13 @@
 
   </header>
 
-  <dib class="content-block"></dib>
+  <dib class="content-block">
+    <div class="content-block_one">1</div>
+    <div class="content-block_two">2</div>
+    <div class="content-block_three">3</div>
+    <div class="content-block_four">4</div>
+    <div class="content-block_five">5</div>
+  </dib>
 
   <footer class="main-footer">
     <div class="container">
