--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,6 @@
     <div class="headerOne">
 
       <div class="wrapper">
-        <!-- <input type="checkbox" id="check-menu">
-        <label for="check-menu" class="check-menu-label">Связь</label>
-        <div class="burger_line first"></div>
-        <div class="burger_line second"></div>
-        <div class="burger_line third"></div>
-        <div class="burger_line fourth"></div> -->
         <div class="mobile-menu">
           <li class="mobile-menu-li mobile-menu-li_one">
             <a href="#" class="mobile-menu-a_one">+380953989891</a> 
@@ -42,15 +36,15 @@
         <input type="radio" name="button" id="button3" checked="">
         <label class="label_flageng" for="button3"></label>
       </div>
+      
       <div  class="shopping_basket">
         <div class="cart">
           <a href="" class="shopping-backet">
             <img src="images/basket_111.png" class="img_basket" alt="">
             <div class="cart-block">
-              <div class="cart-block-one">999999.00<span>&#8194;</span><span>uan</span></div>
+              <div class="cart-block-one">99999.00<span>&#8194;</span><span>uan</span></div>
               <div class="cart-block-two">0<span>&#8194;</span><span>pcs</span></div>
             </div>
-            <!-- <p class="text_basket">карзина</p> -->
           </a>
         </div>
       </div>   
@@ -541,7 +535,7 @@
 
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-              <a href="#"><i class="fas fa-th-list"></i>Малая механизация</a>
+              <a href="#"><i class="fas fa-th-list"></i>Механизация</a>
               <label for="sub_m2" class="toggleSubmenu"><i class="fa"></i></label>
               <ul class="level-li-two">
                 <li>
@@ -586,7 +580,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2-5">
-                  <a href="#">Ограничительные линейки</a>
+                  <a href="#">Ограничители линейки</a>
                   <label for="sub_m2-5" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">x</a></li>
@@ -682,13 +676,13 @@
 
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4">
-              <a href="#"><i class="fas fa-th-list"></i>Иглы</a>
+              <a href="#"><i class="fas fa-th-list"></i>Оборудование</a>
               <label for="sub_m4" class="toggleSubmenu"><i class="fa"></i></label>
               <ul class="level-li-four">
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-0">
-                  <a href="#">DOTEC БЫТОВЫЕ</a>
+                  <a href="#">DOTEC home</a>
                   <label for="sub_m4-0" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">ИГЛЫ DOTEC HAx1</a></li>
@@ -698,7 +692,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-1">
-                  <a href="#">DOTEC ПРОМЫШЛЕННЫЕ</a>
+                  <a href="#">DOTEC</a>
                   <label for="sub_m4-1" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">CATALOG ИГЛЫ DOTEC</a></li>
@@ -734,7 +728,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-2">
-                  <a href="#">SCHMETZ ПРОМЫШЛЕННЫЕ</a>
+                  <a href="#">SCHMETZ</a>
                   <label for="sub_m4-2" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">CATALOG ИГЛЫ SCHMETZ</a></li>
@@ -801,7 +795,7 @@
 
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-3">
-                  <a href="#">SCHMETZ БЫТОВЫЕ</a>
+                  <a href="#">SCHMETZ home</a>
                   <label for="sub_m4-3" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">CATALOG ИГЛЫ SCHMETZ</a></li>
@@ -834,7 +828,7 @@
                                
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m4-4">
-                  <a href="#">GROZ BECKERT ПРОМЫШЛЕННЫЕ</a>
+                  <a href="#">GROZ BECKERT</a>
                   <label for="sub_m4-4" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
                     <li><a href="#">CATALOG ИГЛЫ GROZ BECKER</a></li>
@@ -1140,7 +1134,7 @@
     </div>
 
     <div class="aa__content4_button">
-      <a class="button_catalog" href="#">Посмотреть больше catalogs</a>
+      <a class="button_catalog" href="#">Посмотреть все catalogs</a>
     </div>
 
 
@@ -1365,7 +1359,7 @@
     </div>
 
     <div class="aa__content6_button">
-      <a class="button_partsList" href="#">Посмотреть больше Parts Lists</a>
+      <a class="button_partsList" href="#">Посмотреть все Parts Lists</a>
     </div>
 
     <div class="aa__content7">
