--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
             <li class="li-one">
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
               <!-- <a href="#"><i class="fas fa-th-list"></i>Запасти &#11167;</a> -->
-              <a href="#"><i class="fas fa-th-list"></i>Запасти</a>
+              <a href="#" class="li-one_a"><i class="fas fa-th-list"></i>Запчасти</a>
               <label for="sub_m1" class="toggleSubmenu"><i class="fa"></i></label>
               <ul class="level-li-one">
                 <li>
@@ -858,7 +858,7 @@
             </li>
             <li>
               <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m5">
-              <a href="#"><i class="fas fa-th-list"></i>MANUAL</a>
+              <a href="#"><i class="fas fa-th-list"></i>Manual</a>
               <label for="sub_m5" class="toggleSubmenu"><i class="fa"></i></label>
               <ul class="level-li-five">
                 <li>
@@ -1025,7 +1025,7 @@
 
     <div class="aa__content3">
       <div class="aa__c3_block1_linear"></div>
-      <p class="aa__c3_text_one">Catalogs</p>
+      <p class="aa__c3_text_one">Catalog</p>
       <p class="aa__c3_text_two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptatibus fugit, mollitia odio repudiandae tempora omnis maxime ad facilis eum hic ea aliquid nulla voluptate tempore doloremque. Repudiandae itaque cum maxime rem perspiciatis quia consequatur pariatur? Reiciendis, temporibus. Cupiditate voluptas tenetur incidunt neque culpa repellat pariatur animi architecto similique eius quibusdam odit labore accusamus nulla assumenda, dolorem eveniet. Earum, officiis!</p>
     </div>
 
@@ -1134,7 +1134,7 @@
     </div>
 
     <div class="aa__content4_button">
-      <a class="button_catalog" href="#">Посмотреть все catalogs</a>
+      <a class="button_catalog" href="#">Перейти в раздел catalog</a>
     </div>
 
 
