--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       
       <div  class="shopping_basket">
         <div class="cart">
-          <a href="" class="shopping-backet">
+          <a href="" class="a_cart">
             <img src="images/basket_111.png" class="img_basket" alt="">
             <div class="cart-block">
               <div class="cart-block-one">99999.00<span>&#8194;</span><span>uan</span></div>
@@ -863,10 +863,10 @@
               <ul class="level-li-five">
                 <li>
                   <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m5-1">
-                  <a href="#">PARTS LIST</a>
+                  <a href="#">Parts Lists</a>
                   <label for="sub_m5-1" class="toggleSubmenu"><i class="fa"></i></label>
                   <ul>
-                    <li><a href="#">PARTS LIST BARUDAN</a></li>
+                    <li><a href="#">Parts Lists Barudan</a></li>
                     <li><a href="#">PARTS LIST BERNINA</a></li>
                     <li><a href="#">PARTS LIST BONIS</a></li>
                     <li><a href="#">PARTS LIST BROTHER</a></li>
@@ -980,7 +980,12 @@
 
   <div class="main__aa">
     <div class="aa__crumbs">
-      <p class="aa__crumbs_text">главная / запчасти / ..... / ..... / игольная пластина B-16 </p>
+      <p class="aa__crumbs_text">
+        <a href="">главная</a> / 
+        <a href="">запчасти</a> / 
+        <a href="">.....</a> /
+        <a href="">игольная пластина B-16</a>
+      </p>
     </div>
 
     <div class="aa__content1">
@@ -1134,7 +1139,7 @@
     </div>
 
     <div class="aa__content4_button">
-      <a class="button_catalog" href="#">Перейти в раздел catalog</a>
+      <a class="button_catalog" href="#">Перейти в раздел catalogs</a>
     </div>
 
 
