--- a/src/index.html
+++ b/src/index.html
@@ -1175,7 +1175,7 @@
     </div>
 
     <div class="aa-content6-button">
-      <a class="button-parts-list" href="#">Посмотреть все Parts Lists</a>
+      <a class="button-parts-list" href="pagepartslistpdf.html">Посмотреть все Parts Lists</a>
     </div>
 
     <div class="aa-content7">
