--- a/src/index.html
+++ b/src/index.html
@@ -799,7 +799,7 @@
     </div>
   </header>
 
-  <div class="page-array-products-cards">
+  <div id="main">
     <div class="crumbs">
       <ul class="crumbs-text">
         <li><a href="">Главная</a><i class="fas fa-angle-right"></i></li>
@@ -811,11 +811,11 @@
       </ul>
     </div>
 
-    <div class="uuu">
-      <div class="uuu-1">
-        <div class="content1-description">
-          <div class="content1-block-linear"></div>
-          <p class="content1-description-title">Фильтр выбранного товара</p>
+    <div class="page-array-products-cards">
+      <div class="section-filtr">
+        <div class="caption-filtr">
+          <div class="filtr-block-linear"></div>
+          <p class="caption-filtr-text">Фильтр выбранного товара</p>
         </div>
         <div class="content-filtr">
           <form action="demo_form.asp" method="get">
@@ -1174,8 +1174,8 @@
               </nav>
             </div>
             <div class="button-filtr">
-              <button type="reset" value="Reset">Очистить фильтр</button>
-              <button type="submit" value="Submit">Показать</button>
+              <button class="button-reset" type="reset" value="Reset">Очистить фильтр</button>
+              <button class="button-submit" type="submit" value="Submit">Показать</button>
             </div>
             
           </form>
@@ -1187,7 +1187,7 @@
 
 
 
-      <div class="uuu-2">
+      <div class="section-array-products-cards">
         <div class="content1-description">
           <div class="content1-block-linear"></div>
           <p class="content1-description-title">Петлители</p>
@@ -1825,9 +1825,9 @@
       </div>
     </div>
 
-    <div class="pagination-section">
+    <div class="pagination">
       <div class="pagination-wrapper">
-        <div class="pagination">
+        <div class="pagination-section">
           <a href=""><div><i class="fas fa-angle-left"></i></div></a>
           <a class="active" href="?page=1"><div class="active-block">1</div></a>
           <a href="?page=2"><div>2</div></a>
@@ -1871,8 +1871,8 @@
         <p class="helpful-title">Полезное</p>
         <p class="helpful-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ipsam voluptatem esse impedit odio. Ipsam, rerum quae maiores animi fuga voluptates reiciendis suscipit vero quidem provident, quas placeat blanditiis tenetur nemo temporibus in maxime inventore fugiat, rem amet consectetur error.</p>
       </div>
-      <div class="helpful-menu">
-        <div class="helpful-menu-section">
+      <div class="helpful-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/about.png" alt=""> 
@@ -1882,7 +1882,7 @@
             </div> 
           </a> 
         </div>
-        <div class="helpful-menu-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/dhl_2.png" alt=""> 
@@ -1892,7 +1892,7 @@
             </div> 
           </a> 
         </div>
-        <div class="helpful-menu-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/contact_6.png" alt=""> 
@@ -1902,33 +1902,33 @@
             </div> 
           </a> 
         </div>
-        <div class="helpful-menu-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/service_1.png" alt=""> 
             </div> 
             <div class="menu-block-text">
-              <p class="helpful-menu-text">Ремонт оборудывания </p>
+              <p class="helpful-menu-text">Ремонт</p>
             </div> 
           </a> 
         </div>
-        <div class="helpful-menu-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/order_3.png" alt=""> 
             </div> 
             <div class="menu-block-text">
-              <p class="helpful-menu-text">Запчасти под заказ</p>
+              <p class="helpful-menu-text">Под заказ</p>
             </div> 
           </a> 
         </div>
-        <div class="helpful-menu-section">
+        <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
               <img class="helpful-menu-img" src="images/question_1.png" alt=""> 
             </div> 
             <div class="menu-block-text">
-              <p class="helpful-menu-text">Часто задоваемые вопросы</p>
+              <p class="helpful-menu-text">Вопросы и ответы</p>
             </div> 
           </a> 
         </div>
