--- a/src/index_page_parts_list_pdf.html
+++ b/src/index_page_parts_list_pdf.html
@@ -57,10 +57,10 @@
           <a href="#">
             <div class="block-logo">
               <!-- <img class="photo-logo" src="images/49240.png" alt=""> -->
-              <img class="photo-logo" src="images/uuu-1000a.png" alt="">
+              <!-- <img class="photo-logo" src="images/uuu-1000a.png" alt="">
               <div class="block-logo-text">
                 <p class="logo-text">Sewing Industrial Machines Accessories</p>
-              </div>
+              </div> -->
             </div>
           </a>
         </div>
