--- a/src/index.html
+++ b/src/index.html
@@ -813,7 +813,7 @@
       <div class="page-cards-goods-wrapper">
         <div class="content1-description">
           <div class="content1-block-linear"></div>
-          <p class="content1-description-title">Петлитель juki b126-25874-4555app-ooo yyyyyyyyyyyyyy dddddddddd</p>
+          <p class="content1-description-title">Петлитель juki b126-25874-4555app-ooo yyyyyyyyyyyyyy</p>
         </div>
         <div class="content2-cards-goods-base">
           <div class="content2-section-pfoto">
@@ -836,16 +836,19 @@
             <div class="content3-section-sale-wrapper">
               <ul class="section-info-ul">
                 <li class="section-info-li">
-                  <p>Производитель: <span> Тайвань bbbbbbbbbbbbb ffffffff-fffffffffff xxxxxxxxxxxx</span></p>
+                  <p>Название:<span>Петлитель</span></p>
                 </li>
                 <li class="section-info-li">
-                  <p>Бренд: <span> Juki</span></p>
+                  <p>Бренд:<span>Juki</span></p>
                 </li>
                 <li class="section-info-li">
-                 <p>Код товара:<span> lpju-00100</span></p>
+                 <p>Номер:<span>b126-25874-4555app-ooo yyyyyyyyyyyyyy</span></p>
                 </li>
                 <li class="section-info-li">
-                  <p>Parts code:<span> b126-25874-4555app-ooo yyyyyyyyyyyyyy dddddddddd</span></p>
+                  <p>Производитель:<span>Тайвань</span></p>
+                 </li>
+                <li class="section-info-li">
+                  <p>Код товара:<span>lpju-00100</span></p>
                  </li>
               </ul>
               <div class="products-section-buy">
@@ -853,35 +856,139 @@
                   <p>99350.00<span>&#8372;</span></p>
                 </div>
 
-                <div class="content3-block-buy-quantity">
+                <div class="content3-block-buy-choice">
+                  <div class="content3-block-buy-quantity">
+                    <a href="">
+                      <div class="quantity-pieces-minus"><i class="fas fa-minus"></i></div>
+                    </a>
+                    <div class="quantity-pieces"><p>99</p></div>
+                    <a href="">
+                      <div class="quantity-pieces-plus"><i class="fas fa-plus"></i></div>
+                    </a>
+                  </div>
+  
                   <a href="">
-                    <div class="quantity-pieces-minus"><i class="fas fa-minus"></i></div>
-                  </a>
-                  <div class="quantity-pieces"><p>99</p></div>
-                  <a href="">
-                    <div class="quantity-pieces-plus"><i class="fas fa-plus"></i></div>
+                    <div class="content3-block-buy-card">
+                      <p>Купить<span></span></p>
+                    </div>
                   </a>
                 </div>
-
-                <a href="">
-                  <div class="content3-block-buy-card">
-                    <p>Купить<span></span></p>
-                  </div>
-                </a>
-                <a href="">
-                  <div class="content3-block-buy-cry">
-                    <p>Купить в клик<span></span></p>
-                  </div>
-                </a>
               </div>
             </div>
           </div>
         </div>
         <div class="content3-cards-goods-facts">
-          <div class="ppp1"></div>
-          <div class="ppp2"></div>
-          <div class="ppp3"></div>
+          <div class="ppp1">
+            <div class="ppp1-w">
+              <div class="qqq">
+                <div class="content1-description">
+                  <!-- <div class="content1-block-linear"></div> -->
+                  <p class="content1-description-title">Описание</p>
+                </div>
+                <div class="ttt">
+                  <p class="text-ttt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima veniam odio voluptatem ab veritatis nulla provident obcaecati quibusdam illum, porro aspernatur ratione vel praesentium asperiores itaque culpa maiores dolor corrupti!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ppp2">
+            <div class="ppp2-w">
+              <div class="eee">
+                <div class="content1-description">
+                  <!-- <div class="content1-block-linear"></div> -->
+                  <p class="content1-description-title">Характеристики</p>
+                </div>
+              </div>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">тип</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">ротационный скоростной увеличенный длинная ножка</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">производитель</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">тайвань</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">положение</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">вертикальный</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">код</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">hsh-12-15mm(tr2) nbl</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="ppp3">
+            <div class="ppp3-w">
+              <div class="eee">
+                <div class="content1-description">
+                  <!-- <div class="content1-block-linear"></div> -->
+                  <p class="content1-description-title">Применение</p>
+                </div>
+              </div>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">Juki</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">ddddddddddddd ffffffffff hhhhhhhhhhh dddddddddddd</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">Brother</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">bbbbbbbbbb kkkkkkkkkk llllllllllll ssssssssssss wwwwwwwwwww hhhhhhhh</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">Pfaff</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">zzzzzzzzzzz aaaaaaaaaaaa qqqqqqqqqqqq uuuuuuuuuu llllllllll jjjjjjjjjjjjj</p>
+                </li>
+              </ul>
+              <ul>
+                <li class="iii1 iii">
+                  <p class="text">Siruba</p>
+                </li>
+                <li class="iii2 iii">
+                  <p class="text">ggggggggggg dddddddddd uuuuuuuuu</p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <div class="content4-button">
+          <div class="content4-button-wrapper">
+            <div class="content4-description">
+              <!-- <div class="content4-block-linear"></div> -->
+              <p class="content4-description-title">Руководство</p>
+            </div>
+            <div class="block-button">
+              <a class="button-catalog-partslist" href="#">Перейти в раздел catalogs</a>
+              <a class="button-catalog-partslist" href="#">Посмотреть все Parts Lists</a>
+            </div>
+          </div>
+        </div>
+       
     
         <!-- <div class="content2-catalog-cards-products">
           <div class="catalog2-cards-products-wrapper">
